final commit yeaaaaa!

--- a/CSS layout and flexbox-Assessment/index.html
+++ b/CSS layout and flexbox-Assessment/index.html
@@ -31,7 +31,7 @@
       <h3 class="sub-heading">Write Thirsty My Friend</h3>
     </section>
   </header>
-  <main>
+  <main class = "main-container">
     <div class="blog-row">
       <div class="item">
         <div class="icon-wrapper">
@@ -123,7 +123,9 @@
 
       </div>
     </div>
-    <aside>
+  </div>
+    <div class = "aside-container">
+    <aside >
       <div class="auth-pic"></div>
       <h3 class="aside-heading">Jonathan Goldsmith</h3>
       <hr>
@@ -137,6 +139,7 @@
       enough acting work to survive and wound up working various jobs, including driving a garbage truck and working in
       construction, to help make ends meet.</p>
     </aside>
+  </div>
   </main>
   <footer>
     <span>iBlog 2017</span>
